Complete K-Map solver & visualizer overhaul with logic circuit generator, truth table, CI/CD, and Java 8 compatibility